# alacritty

./: Cargo.toml  README.md
alacritty/: Cargo.toml
alacritty/src/: main.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: lib.rs
alacritty_terminal/src/config/: mod.rs
alacritty_terminal/src/renderer/: mod.rs
app/: Cargo.toml
app/src/: event.rs  main.rs  window.rs
ci/: script.sh
src/: config.rs  display.rs  event_loop.rs  input.rs  lib.rs  logging.rs
src/renderer/: mod.rs
src/term/: mod.rs
