[package]
name = "alacritty-core"
version = "0.1.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
build = "build.rs"
description = "GPU-accelerated terminal emulator"

[dependencies]
libc = "0.2"
cgmath = "0.16"
notify = "4"
bitflags = "1"
font = { path = "./font" }
errno = "0.2"
parking_lot = "0.5"
serde = "1"
serde_derive = "1"
vte = "0.3"
mio = "0.6"
mio-more = "0.1"
copypasta = { path = "./copypasta" }
xdg = "2"
log = "0.4"
clap = "2"
fnv = "1"
unicode-width = "0.1"
arraydeque = "0.4"
clippy = { version = "*", optional = true }
env_logger = "0.5"
base64 = "0.9.0"
smart-default = "0.2.0"

[dev-dependencies]
serde_json = "1"

[features]
default = []
# Enabling this feature makes shaders automatically reload when changed
live-shader-reload = []
nightly = []
bench = []

[build-dependencies]
gl_generator = "0.9"
