[package]
name = "alacritty"
version = "0.1.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "GPU-accelerated terminal emulator"

[dependencies]
alacritty-core = { path = ".." }
glutin = "0.12"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd"))'.dependencies]
x11-dl = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"

[features]
default = []
nightly = []

[profile.release]
lto = true
debug = true
